Add nomad file